--- a/DashBoard.ipynb
+++ b/DashBoard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "black-disease",
+   "id": "mighty-while",
    "metadata": {},
    "source": [
     "# DashBoard for experiments using FRE"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "russian-woman",
+   "id": "joined-irish",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "senior-mills",
+   "id": "damaged-teacher",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "characteristic-government",
+   "id": "dental-blink",
    "metadata": {},
    "source": [
     "## pp check"
@@ -41,51 +41,51 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "inclusive-melbourne",
+   "id": "retired-dublin",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_verif(ppdir, xmlpath, freversion, realm=\"ocean\")"
+    "pp_verif(ppdir, xmlpath, freversion, model=\"ocean\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "statistical-newman",
+   "id": "historical-foundation",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_verif(ppdir, xmlpath, freversion, realm=\"atmos\")"
+    "pp_verif(ppdir, xmlpath, freversion, model=\"atmos\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "banner-above",
+   "id": "offensive-implement",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_verif(ppdir, xmlpath, freversion, realm=\"land\")"
+    "pp_verif(ppdir, xmlpath, freversion, model=\"land\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "occupational-timer",
+   "id": "minus-reproduction",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_verif(ppdir, xmlpath, freversion, realm=\"river\")"
+    "pp_verif(ppdir, xmlpath, freversion, model=\"river\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "instant-warrior",
+   "id": "twelve-force",
    "metadata": {},
    "outputs": [],
    "source": [
-    "pp_verif(ppdir, xmlpath, freversion, realm=\"ice\")"
+    "pp_verif(ppdir, xmlpath, freversion, model=\"ice\")"
    ]
   }
  ],
