update template, remove state file

--- a/DashBoard.ipynb
+++ b/DashBoard.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "mighty-while",
+   "id": "turned-concentrate",
    "metadata": {},
    "source": [
     "# DashBoard for experiments using FRE"
@@ -11,17 +11,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "joined-irish",
+   "id": "possible-class",
    "metadata": {},
    "outputs": [],
    "source": [
-    "from pp_funcs import pp_verif"
+    "from pp_funcs import pp_verif\n",
+    "from perf_funcs import build_stats_run"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "damaged-teacher",
+   "id": "incident-median",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +33,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dental-blink",
+   "id": "treated-split",
+   "metadata": {},
+   "source": [
+    "## Perf check"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "graphic-reach",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "stats = build_stats_run(ppdir.replace('pp',''))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "antique-pantyhose",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "total = stats[stats['model'] == 'Total runtime']\n",
+    "total.plot(x='year', y='tavg', marker='o', figsize=[10,8])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "collective-history",
    "metadata": {},
    "source": [
     "## pp check"
@@ -41,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "retired-dublin",
+   "id": "processed-plane",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,7 +81,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "historical-foundation",
+   "id": "seven-australia",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_verif(ppdir, xmlpath, freversion, model=\"ocean\", ftype=\"av\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "integral-graham",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,7 +101,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "offensive-implement",
+   "id": "fifth-thanksgiving",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_verif(ppdir, xmlpath, freversion, model=\"atmos\", ftype=\"av\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "explicit-accounting",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +121,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "minus-reproduction",
+   "id": "recreational-discussion",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_verif(ppdir, xmlpath, freversion, model=\"land\", ftype=\"av\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "chubby-updating",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,17 +141,37 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "twelve-force",
+   "id": "federal-despite",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_verif(ppdir, xmlpath, freversion, model=\"river\", ftype=\"av\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "sharing-savannah",
    "metadata": {},
    "outputs": [],
    "source": [
     "pp_verif(ppdir, xmlpath, freversion, model=\"ice\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "threatened-reducing",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pp_verif(ppdir, xmlpath, freversion, model=\"ice\", ftype=\"av\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Mackenzie",
+   "display_name": "mac",
    "language": "python",
    "name": "mackenzie"
   },
